[tool.poetry]
name = "bookbrary"
version = "0.2.0"
description = ""
authors = ["Derk Weijers <derk@weijers.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["dotenv"], version = "^3.0.1"}
flask-jwt-extended = "^4.6.0"
flask-marshmallow = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.0.0"
psycopg2-binary = "^2.9.9"
flask-migrate = "^4.0.5"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
tox = "^4.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py311, py312, lint

    [gh-actions]
    python =
        3.11: py11
        3.12: py12, lint

    [testenv]
    deps = 
        pytest 
        pytest-cov 
    setenv = 
        FLASK_SQLALCHEMY_DATABASE_URI=sqlite:///:memory:
        FLASK_JWT_SECRET_KEY=secret
        FLASK_SECRET_KEY=secret   
        FLASK_TESTING=True
    commands = pytest --cov=bookbrary --cov-report=xml {posargs}

    [testenv:lint]
    deps = ruff
    commands = 
        ruff format --check
        ruff check
"""